--- a/package.json
+++ b/package.json
@@ -13,6 +13,22 @@
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
+  "configSchema": {
+    "useAtomFont": {
+      "title": "Use your atom syntax font in whatsapp",
+      "description": "",
+      "type": "boolean",
+      "default": true,
+      "order": 1
+    },
+    "useAtomThemes":{
+      "title": "Use your atom theme font in whatsapp",
+      "description": "atom-whatsapp tries to apply your theme and syntax to whatsapp, this might not work with every theme",
+      "type": "boolean",
+      "default": true,
+      "order": 2
+    }
+  },
   "dependencies": {
   }
 }
