--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
       "order": 2
     }
   },
+	"deserializers": {
+		"AtomWhatsappView": "deserializeAtomWhatsappView"
+	},
   "dependencies": {
   }
 }
