Tecnicamente aggiunge la possibilità di scegliere il tipo di notifica

--- a/package.json
+++ b/package.json
@@ -29,6 +29,24 @@
       "type": "boolean",
       "default": true,
       "order": 2
+    },
+    "notificationBehaviour":{
+      "title": "Notification behaviour",
+      "description": "atom-whatsapp tries to apply atom colorscheme and font to whatsapp webview. This may not work properly with some themes.",
+      "type": "string",
+      "radio":"true",
+      "default": "show",
+      "enum": [
+        {
+          "value": "show",
+          "description": "Clicking on a notification focuses the chat"
+        },
+        {
+          "value": "reply",
+          "description":"(Beta)Notifications have an input box for quick replies"
+        }
+      ],
+      "order": 3
     }
   },
   "deserializers": {
