Toglie reply preload

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     },
     "notificationBehaviour":{
       "title": "Notification behaviour",
-      "description": "atom-whatsapp tries to apply atom colorscheme and font to whatsapp webview. This may not work properly with some themes.",
+      "description": "",
       "type": "string",
       "radio":"true",
       "default": "show",
