solved problem with user agent
now whatsapp reloads automatically if there's a problem with the cached
user agent, so it should always work

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
       "title": "Use same font as atom editor",
       "description": "",
       "type": "boolean",
-      "default": true,
+      "default": false,
       "order": 1
     },
     "useAtomThemes": {
